more changes to fit earlier java versions